--- a/adoptionmanager.html
+++ b/adoptionmanager.html
@@ -9,7 +9,6 @@
 
     <!-- HomePage CSS -->
     <link href="styles/homepage.css" rel="stylesheet">
-    <link href="styles/homepage.css" rel="stylesheet">
 
     <!-- Bootstrap CSS v5.2.1 -->
     <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css"
@@ -34,7 +33,7 @@
             <div class="collapse navbar-collapse" id="collapsibleNavId">
                 <ul class="navbar-nav me-auto mt-2 mt-lg-0">
                     <li class="nav-item">
-                        <a aria-current="page" class="nav-link active" href="#div1">Adopt <span class="visually-hidden">(current)</span></a>
+                        <a aria-current="page" class="nav-link active" href="adoptionmanager.html">Adopt <span class="visually-hidden">(current)</span></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#div2">About</a>
@@ -249,17 +248,8 @@
         summaryDiv.style.display = 'block';
     });
 </script>
-<script crossorigin="anonymous"
-        integrity="sha256-/xUj+3OJU5yEx1q6GSYGSHk7tPXikynS7ogEvDej/m4="
-        src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-<script crossorigin="anonymous"
-        integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
-        src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js">
-</script>
-<script crossorigin="anonymous"
-        integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz"
-        src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js">
-</script>
+
+
 </body>
 
 </html>
