--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <!-- Populate Animal Carousel Script, 3 for larger screen, 2 for mobile screens.  -->
   <script src="scripts/populate_animal_carousel.js"></script>
 
+  
 </head>
 
 <body>
@@ -26,7 +27,7 @@
         <!--NAV BAR -->
         <nav class="navbar navbar-expand-sm fixed-top custom-navbar">
             <!--Use custom-navbar-brand ... to make changes!-->
-            <a class="navbar-brand" href="#">Assignment_3</a>
+            <a class="navbar-brand" href="">Assignment_3</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavId" aria-controls="collapsibleNavId"
                 aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -109,7 +110,7 @@
                 </div>
             </div> 
 
-        <div id="div1"> Adopt</div>
+        <div id="div1"> Adopt<br><a href="/adoptionmanager.html">Adoption Manager Page</a> </div>
         <div id="div2"> About </div>
         <div id="div3"> Donate</div>
         
