--- a/adoptionmanager.html
+++ b/adoptionmanager.html
@@ -9,6 +9,7 @@
 
     <!-- HomePage CSS -->
     <link href="styles/homepage.css" rel="stylesheet">
+    <link href="styles/adoptionmanager.css" rel="stylesheet">
 
     <!-- Bootstrap CSS v5.2.1 -->
     <link crossorigin="anonymous" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css"
@@ -74,7 +75,6 @@
             <label class="form-label" for="animalType">Type of Animal</label>
             <select class="form-select" id="animalType" onchange="showAnimals(this.value)">
                 <option value="">All</option>
-                <!-- types of animals here -->
             </select>
         </div>
         <div class="d-flex flex-wrap" id="animalsContainer">
@@ -204,7 +204,7 @@
         document.getElementById('selectedPetId').textContent = id;
 
         // Show the modal
-        var myModal = new bootstrap.Modal(document.getElementById('adoptionFormModal'));
+        const myModal = new bootstrap.Modal(document.getElementById('adoptionFormModal'));
         myModal.show();
 
         // Show the first step and hide others
