updated adoption css
updated css and certain class names in adoption html

--- a/adoptionmanager.html
+++ b/adoptionmanager.html
@@ -69,8 +69,9 @@
     </div>
 </header>
 <main>
-    <div class="container mt-5">
+    <div class="container main__content mt-5">
         <h2>Adopt a Pet</h2>
+        <img id="adopt__banner" src="https://images.squarespace-cdn.com/content/v1/51fbb364e4b0d35aeaac238d/1375490813782-F18USZ5NXAJE2ZGDMIKV/adoption-fee-banner.jpg?format=1500w">
         <div class="mb-3">
             <label class="form-label" for="animalType">Type of Animal</label>
             <select class="form-select" id="animalType" onchange="showAnimals(this.value)">
