changed just one line to align FAQ

--- a/FAQ.html
+++ b/FAQ.html
@@ -72,7 +72,7 @@
     <div class="container main__content mt-5 ">
 
         <h2 class="p-5"> Frequently Asked Questions</h2>
-        <iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen frameborder="0" height="315" src="https://www.youtube.com/embed/U2DvzPwgXGM?si=n7K8gVzE0_--lPZ-" title="YouTube video player" width="560"></iframe>
+        <iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen class="mx-auto d-block" frameborder="0" height="315" src="https://www.youtube.com/embed/U2DvzPwgXGM?si=n7K8gVzE0_--lPZ-" title="YouTube video player" width="560"></iframe>
         <div class="list-group list__container my-5">
             <ul class="list-group">
                 <p><b>What is a list of stuff that might move on my dog?</b></p>
