update AMV2 + AM.css
added stylesheet to V2 and added css to align stuff in that page.

--- a/adoptionmanagerV2.html
+++ b/adoptionmanagerV2.html
@@ -13,7 +13,7 @@
     
     <!--Styles-->
     <link rel="stylesheet" href="styles/universal.css">
-    <link rel="stylesheet" href="styles/adoptionguide.css">
+    <link rel="stylesheet" href="styles/adoptionmanager.css">
 
     <!--Nav Bar-->
     <script src="scripts/navbar.js"></script>
