--- a/adoptionguide.html
+++ b/adoptionguide.html
@@ -2,10 +2,12 @@
 <html lang="en">
 
 <head>
-    <title>Title</title>
+    <title>Adopt a Pet - Your Companion Awaits</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport">
+    <meta name="description" content="Find your perfect pet for adoption. Browse through various animal types and complete the adoption process easily.">
+    <meta name="keywords" content="pet adoption, adopt a dog, adopt a cat, animal shelter">
 
     <!-- Bootstrap CSS v5.2.1 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -90,7 +92,7 @@
         </div>
         <div class="complaining">
             <img id="guide__complain"
-                 src="https://static.wixstatic.com/media/875ae7_ed1fdf04dbee48dc8b1817c1810f1b3a~mv2.png/v1/fill/w_560,h_560,fp_0.50_0.50,q_85,usm_0.66_1.00_0.01,enc_auto/image.png">
+                 alt="Various things about adoption fees"  src="https://static.wixstatic.com/media/875ae7_ed1fdf04dbee48dc8b1817c1810f1b3a~mv2.png/v1/fill/w_560,h_560,fp_0.50_0.50,q_85,usm_0.66_1.00_0.01,enc_auto/image.png">
         </div>
 
         <div>
