--- a/adoptionmanagerV2.html
+++ b/adoptionmanagerV2.html
@@ -2,10 +2,12 @@
 <html lang="en">
 
 <head>
-    <title>Title</title>
-    <!-- Required meta tags -->
+    <title>Adopt a Pet - Your Companion Awaits</title>
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport">
+    <meta name="description" content="Find your perfect pet for adoption. Browse through various animal types and complete the adoption process easily.">
+    <meta name="keywords" content="pet adoption, adopt a dog, adopt a cat, animal shelter">
+
 
     <!-- Bootstrap CSS v5.2.1 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -23,7 +25,7 @@
 <main>
     <div class="container main__content mt-5">
         <h2>Adopt a Pet</h2>
-        <img id="adopt__banner" src="https://images.squarespace-cdn.com/content/v1/51fbb364e4b0d35aeaac238d/1375490813782-F18USZ5NXAJE2ZGDMIKV/adoption-fee-banner.jpg?format=1500w">
+        <img id="adopt__banner" alt="Banner talking about adoption fees" src="https://images.squarespace-cdn.com/content/v1/51fbb364e4b0d35aeaac238d/1375490813782-F18USZ5NXAJE2ZGDMIKV/adoption-fee-banner.jpg?format=1500w">
         <div class="mb-3">
             <label class="form-label" for="animalType">Type of Animal</label>
             <select class="form-select" id="animalType" onchange="showAnimals(this.value)">
