--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+  
+  <!--Universal-->
+  <link href="styles/universal.css" rel="stylesheet">
+  
   <!-- HomePage CSS -->
   <link rel="stylesheet" href="styles/homepage.css">
 
