--- a/FAQ.html
+++ b/FAQ.html
@@ -22,7 +22,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Belanosima:wght@400;600&family=Ultra&display=swap" rel="stylesheet">
-  
+
 </head>
 <body>
 <main>
@@ -89,7 +89,7 @@
 
 </main>
 <footer>
-    © 2023 Animal Adoption Center
+    Adopt-a-Pet©. Animal Adoption Center, 2023 
 </footer>
 
     <!-- Bootstrap JavaScript Libraries -->
