--- a/adoptionguide.html
+++ b/adoptionguide.html
@@ -17,7 +17,7 @@
 
     <!--Nav Bar-->
     <script src="scripts/navbar.js"></script>
-    
+
       <!--Font-->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -394,8 +394,9 @@
     </div>
 
 </main>
+
 <footer>
-    © 2023 Animal Adoption Center
+Adopt-a-Pet©. Animal Adoption Center, 2023 
 </footer>
 
 <script>
