--- a/adoptionmanagerV1.html
+++ b/adoptionmanagerV1.html
@@ -22,7 +22,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Belanosima:wght@400;600&family=Ultra&display=swap" rel="stylesheet">
-  
+
 </head>
 <body>
 <main>
@@ -88,9 +88,7 @@
 
 
 <footer>
-    <div>
-        <p>© 2023 Animal Adoption Center</p>
-    </div>
+    Adopt-a-Pet©. Animal Adoption Center, 2023 
 </footer>
 
 <script>
