--- a/adoptionmanagerV2.html
+++ b/adoptionmanagerV2.html
@@ -90,9 +90,7 @@
 
 
 <footer>
-    <div>
-        <p>© 2023 Animal Adoption Center</p>
-    </div>
+    Adopt-a-Pet©. Animal Adoption Center, 2023 
 </footer>
 
 <!-- Bootstrap JavaScript Libraries -->
