--- a/contact.html
+++ b/contact.html
@@ -58,7 +58,7 @@
     </main>
 
     <footer>
-        <p> © 2023 Animal Adoption Center</p>
+        Adopt-a-Pet©. Animal Adoption Center, 2023 
     </footer>
 
     <script src="/scripts/contact.js"></script>
