--- a/donation.html
+++ b/donation.html
@@ -23,7 +23,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Belanosima:wght@400;600&family=Ultra&display=swap" rel="stylesheet">
-  
+
 </head>
 <body>
     <main class="container my-5">
@@ -80,9 +80,7 @@
     </main>
 
     <footer>
-        <div>
-            <p>© 2023 Animal Adoption Center</p>
-        </div>
+        Adopt-a-Pet©. Animal Adoption Center, 2023 
     </footer>
 
     <script src="scripts/donation.js"></script>
