--- a/donation.html
+++ b/donation.html
@@ -3,7 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Give a treat! Donate to the Animal Adoption Center!</title>
+    <title>Give a treat!</title>
+
+    <!-- Meta tags for social media-->
+    <meta name="description" content="Support the Animal Adoption Center by making a donation today. Your generosity provides food, shelter, and care for pets waiting for their forever home.">
+    <meta name="keywords" content="animal donation, pet donation, support animal shelter, donate to pets, help pets">
+    <meta property="og:title" content="Support Our Animal Friends - Make a Donation">
+    <meta property="og:description" content="Every donation helps us to provide the best care for pets in need. Donate today and be a part of our mission to find loving homes for all our animals.">
+    <meta property="og:type" content="website">
+    <meta name="twitter:title" content="Give a treat! Donate to the Animal Adoption Center!">
+    <meta name="twitter:description" content="Join us in making a difference for animals in need. Your donation can change lives and bring joy to pets awaiting adoption.">
 
     <!--Styles-->
     <!--Universal-->
