--- a/index.html
+++ b/index.html
@@ -2,10 +2,21 @@
 <html lang="en">
 
 <head>
-  <title>Title</title>
+  <title>Adopt-a-Pet</title>
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+  <meta name="description" content="Adopt-a-Pet connects you with countless pets in need of a home.">
+  <meta name="keywords" content="pet adoption, adopt a pet, animal shelter, rescue animals, adopt a dog, adopt a cat, pet care">
+
+  <!-- Meta tags for social media-->
+  <meta property="og:title" content="Adopt-a-Pet">
+  <meta property="og:description" content="Join Adopt-a-Pet in giving animals a loving home. Explore our adoption guide, view featured pets, and start the adoption process.">
+  <meta name="twitter:title" content="Adopt-a-Pet - Your New Friend Awaits">
+  <meta name="twitter:description" content="Looking to adopt? Find your perfect pet companion at Adopt-a-Pet."> 
+  <meta name="author" content="Adopt-a-Pet Organization">
+  <meta name="robots" content="index, follow">
   
   <!--Universal-->
   <link href="styles/universal.css" rel="stylesheet">
@@ -24,6 +35,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Belanosima:wght@400;600&family=Ultra&display=swap" rel="stylesheet">
+
 
  
 </head>
