--- a/FAQ.html
+++ b/FAQ.html
@@ -7,6 +7,16 @@
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport">
 
+    <!-- Meta tags for social media-->
+    <meta name="description" content="Get answers to your frequently asked questions about pet adoption, the adoption process, requirements, costs, and more at Adopt-a-Pet.">
+    <meta name="keywords" content="FAQ, pet adoption, adoption questions, adopt a pet FAQ, pet adoption process, pet adoption requirements">
+    <meta property="og:title" content="Frequently Asked Questions - Adopt-a-Pet">
+    <meta property="og:description" content="Find answers to common questions about pet adoption at Adopt-a-Pet. Learn about the process, requirements, and how you can give a loving home to a pet in need.">
+    <meta property="og:type" content="website">
+    <meta name="twitter:card" content="summary">
+    <meta name="twitter:title" content="F.A.Q. - Adopt-a-Pet">
+    <meta name="twitter:description" content="Your top pet adoption questions answered. Discover everything you need to know about adopting a furry friend from Adopt-a-Pet.">
+
     <!-- Bootstrap CSS v5.2.1 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
