--- a/adoptionguide.html
+++ b/adoptionguide.html
@@ -2,10 +2,20 @@
 <html lang="en">
 
 <head>
-    <title>Title</title>
+    <title>Adoption Process and Fees</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport">
+
+    <!-- Meta tags for social media-->
+    <meta name="description" content="Understand the adoption process and fees at Adopt-a-Pet. We ensure a transparent and straightforward adoption journey for you and your future pet.">
+    <meta name="keywords" content="adoption process, pet adoption fees, adopt a pet, pet care costs, animal shelter">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Adoption Process and Fees - Adopt-a-Pet">
+    <meta property="og:description" content="Planning to adopt? Get familiar with the steps and fees involved in adopting a pet from our center. Find all you need to know before bringing home your new friend.">
+    <meta property="twitter:title" content="Adoption Process and Fees - Adopt-a-Pet">
+    <meta property="twitter:description" content="Discover the simple adoption process and clear fee structure at Adopt-a-Pet. We support you in every step towards adopting your new pet.">
+
 
     <!-- Bootstrap CSS v5.2.1 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
