--- a/adoptionmanagerV1.html
+++ b/adoptionmanagerV1.html
@@ -2,10 +2,19 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <title>Adopt</title>
+    <title>Adopt a Pet</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta content="width=device-width, initial-scale=1, shrink-to-fit=no" name="viewport">
+
+    <!-- Meta tags for social media-->
+    <meta name="description" content="Find your perfect pet for adoption. Browse through various animal types and complete the adoption process easily.">
+    <meta name="keywords" content="pet adoption, adopt a dog, adopt a cat, animal shelter">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Adopt a Pet - Your Companion Awaits">
+    <meta property="og:description" content="Ready to meet your new best friend? Explore a wide range of animals waiting for a loving home.">
+    <meta property="twitter:title" content="Adopt a Pet - Your Companion Awaits">
+    <meta property="twitter:description" content="Discover pets for adoption that fit your lifestyle. Begin your journey towards adding a furry member to your family.">
 
     <!-- Bootstrap CSS v5.2.1 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
