--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Us</title>
 
+    <!-- Meta tags for social media-->
+    <meta name="description" content="Reach out to the Animal Adoption Center. Contact us for inquiries about pet adoption, how you can help, or any other questions you might have.">
+    <meta name="keywords" content="contact animal shelter, animal adoption center contact, pet adoption queries, animal help contact">
+    <meta property="og:title" content="Get in Touch - Animal Adoption Center">
+    <meta property="og:description" content="Looking for more information on how to adopt or support our animals? Contact the Animal Adoption Center today!">
+    <meta property="og:type" content="website">
+    <meta name="twitter:title" content="Contact Us - Animal Adoption Center">
+    <meta name="twitter:description" content="Have questions? We're here to help! Contact the Animal Adoption Center for all your pet adoption and support needs.">
+
     <!-- Bootstrap CSS v5.2.1 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
