translate button placed inside nar bar

--- a/index.html
+++ b/index.html
@@ -7,17 +7,16 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+  <!-- Meta tags for social media-->
   <meta name="description" content="Adopt-a-Pet connects you with countless pets in need of a home.">
   <meta name="keywords" content="pet adoption, adopt a pet, animal shelter, rescue animals, adopt a dog, adopt a cat, pet care">
-
-  <!-- Meta tags for social media-->
   <meta property="og:title" content="Adopt-a-Pet">
   <meta property="og:description" content="Join Adopt-a-Pet in giving animals a loving home. Explore our adoption guide, view featured pets, and start the adoption process.">
   <meta name="twitter:title" content="Adopt-a-Pet - Your New Friend Awaits">
   <meta name="twitter:description" content="Looking to adopt? Find your perfect pet companion at Adopt-a-Pet."> 
   <meta name="author" content="Adopt-a-Pet Organization">
   <meta name="robots" content="index, follow">
-  
+
   <!--Universal-->
   <link href="styles/universal.css" rel="stylesheet">
   
@@ -35,7 +34,6 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Belanosima:wght@400;600&family=Ultra&display=swap" rel="stylesheet">
-
 
  
 </head>
@@ -79,7 +77,7 @@
                     <input class="form-control me-2" type="text" placeholder="Search">
                     <!--use  .btn custom-btn-outline-success... to make your own!-->
                     <button class="btn btn-outline-success" type="submit"
-                    style="margin-right: 2%;">
+                    style="margin-right: 200px;">
                     Search</button>
                 </form>
             </div>
@@ -279,7 +277,7 @@
   </script>
 
 <div class="gtranslate_wrapper"></div>
-<script>window.gtranslateSettings = {"default_language":"en","native_language_names":true,"detect_browser_language":true,"languages":["en","fr"],"wrapper_selector":".gtranslate_wrapper","horizontal_position":"right","vertical_position":"bottom","flag_style":"3d","alt_flags":{"en":"canada","fr":"quebec"}}</script>
+<script>window.gtranslateSettings = {"default_language":"en","native_language_names":true,"detect_browser_language":true,"languages":["en","fr"],"wrapper_selector":".gtranslate_wrapper","flag_size":24,"horizontal_position":"right","vertical_position":"top","flag_style":"3d","alt_flags":{"en":"canada","fr":"quebec"}}</script>
 <script src="https://cdn.gtranslate.net/widgets/latest/fn.js" defer></script>
 
 </body>
