--- a/adoptionguide.html
+++ b/adoptionguide.html
@@ -32,6 +32,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Belanosima:wght@400;600&family=Ultra&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Belanosima:wght@400;600&family=Ultra&display=swap" rel="stylesheet">
 
 </head>
 
@@ -197,12 +198,12 @@
         <h3>Rabbits</h3>
         <div class="accordion" id="rabbitFeesAccordion">
             <div class="accordion-item">
-                <h2 class="accordion-header" id="headingOne">
+                <h3 class="accordion-header" id="headingOne">
                     <button aria-controls="collapseOne" aria-expanded="true" class="accordion-button"
                             data-bs-target="#collapseOne" data-bs-toggle="collapse" type="button">
                         Initial Adoption Fee
                     </button>
-                </h2>
+                </h3>
                 <div aria-labelledby="headingOne" class="accordion-collapse collapse show"
                      data-bs-parent="#rabbitFeesAccordion" id="collapseOne">
                     <div class="accordion-body">
@@ -211,12 +212,12 @@
                 </div>
             </div>
             <div class="accordion-item">
-                <h2 class="accordion-header" id="headingTwo">
+                <h3 class="accordion-header" id="headingTwo">
                     <button aria-controls="collapseTwo" aria-expanded="false" class="accordion-button collapsed"
                             data-bs-target="#collapseTwo" data-bs-toggle="collapse" type="button">
                         Care Package Fee
                     </button>
-                </h2>
+                </h3>
                 <div aria-labelledby="headingTwo" class="accordion-collapse collapse"
                      data-bs-parent="#rabbitFeesAccordion" id="collapseTwo">
                     <div class="accordion-body">
@@ -225,12 +226,12 @@
                 </div>
             </div>
             <div class="accordion-item">
-                <h2 class="accordion-header" id="headingThree">
+                <h3 class="accordion-header" id="headingThree">
                     <button aria-controls="collapseThree" aria-expanded="false" class="accordion-button collapsed"
                             data-bs-target="#collapseThree" data-bs-toggle="collapse" type="button">
                         Vet Fee
                     </button>
-                </h2>
+                </h3>
                 <div aria-labelledby="headingThree" class="accordion-collapse collapse"
                      data-bs-parent="#rabbitFeesAccordion" id="collapseThree">
                     <div class="accordion-body">
