--- a/FAQ.html
+++ b/FAQ.html
@@ -23,7 +23,7 @@
     
     <!--Style-->
     <link rel="stylesheet" href="styles/universal.css">
-    <link href="styles/adoptionguide.css" rel="stylesheet">
+    <link href="styles/faq.css" rel="stylesheet">
 
     <!--Nav Bar-->
     <script src="scripts/navbar.js"></script>
@@ -43,7 +43,7 @@
         <iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen class="mx-auto d-block" frameborder="0" height="315" src="https://www.youtube.com/embed/U2DvzPwgXGM?si=n7K8gVzE0_--lPZ-" title="YouTube video player" width="560"></iframe>
         <div class="list-group list__container my-5">
             <ul class="list-group">
-                <p><b>What is a list of stuff that might move on my dog?</b></p>
+                <p style='font-size:26px'><b>What is a list of stuff that might move on my dog?</b></p>
                 <li class="list-group-item">Fleas</li>
                 <li class="list-group-item">Parasites</li>
                 <li class="list-group-item">The Thing</li>
@@ -76,7 +76,7 @@
             </ul>
         </div>
         <div class="list-unstyled list__container my-5">
-            <p><b>3 Fun facts about animals</b></p>
+            <p style='font-size:26px'><b>3 Fun facts about animals</b></p>
             <ol>
                 <li>Dogs have a sense of time and can miss their owners when they are gone.</li>
                 <li>Cats have a special reflective layer behind their retinas that enhances their night vision.</li>
@@ -91,7 +91,7 @@
                 This is about our ex-partner that used to source animal, we have disabled this link for your own safety showing an example of one of their dog
             </a>
 
-            <button class="list-group-item list-group-item-action " href="www.youtube.com/watch?v=K8MFie0l7Ww" type="button"> this is a button</button>
+          <!--  <button class="list-group-item list-group-item-action " href="www.youtube.com/watch?v=K8MFie0l7Ww" type="button"> This is a button </button> -->
 
         </div>
 
