--- a/index.html
+++ b/index.html
@@ -96,7 +96,8 @@
                 <div id="featured-animals-container">
 
                     <div id="carousel-top-text">
-                        <h2 class="text">Featured Animals</h2>
+                        <br />
+                        <h1 class="text-important">Featured Animals</h1>
                     </div>
 
                     <div id="carouselId" class="carousel slide" data-bs-ride="carousel">
@@ -133,7 +134,7 @@
         <div id="div1">
             <div class="container">
                 <div class="content-holder">
-                        <h1 class="text-important">Feeling ready to adopt?</h1>
+                        <h1 class="text-important">Feeling ready to adopt?</h1> 
                     <div class="content animal-content">    
                         <div class="pannel animal-pannel">
                             <div class="pannel-top text">
@@ -219,11 +220,11 @@
         <div id="div3">
             <div class="container">
                 <div class="content-holder">
-                        <h1 class="text-important">Donate!</h1>
+                        <h1 class="text-important">Support Us!</h1>
                     <div class="content donate-content">    
                         <div class="pannel donate-pannel">
                             <div class="pannel-top text">
-                               Donations help!<br>Find out about Donatating!
+                               Donations help!<br>Find out about Donating!
                             </div>
                             <div class="pannel-bottom">
                                 <button type="button" class="btn btn-light btn-lg">
