--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Belanosima:wght@400;600&family=Ultra&display=swap" rel="stylesheet">
 </head>
 <body>
-
+    <main>
     <div class="container">
         <main>
             <section class="contact-info">
@@ -58,8 +58,9 @@
         
                     <label for="message">Message:</label>
                     <textarea id="message" name="message" rows="4" required></textarea>
-        
-                    <button type="submit">Send Message</button>
+
+                    <button type="submit" class="btn btn-light contact-btn btn-lg">Send Message</button>
+
                 </form>
             </section>
 
@@ -68,6 +69,7 @@
             </section>
         </main>
     </div>
+</main>
 
     <footer>
         Adopt-a-Pet©. Animal Adoption Center, 2023 
