--- a/FAQ.html
+++ b/FAQ.html
@@ -39,8 +39,8 @@
 
     <div class="container main__content mt-5 ">
 
-        <h2 class="p-5"> Frequently Asked Questions</h2>
-        <iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen class="mx-auto d-block" frameborder="0" height="315" src="https://www.youtube.com/embed/U2DvzPwgXGM?si=n7K8gVzE0_--lPZ-" title="YouTube video player" width="560"></iframe>
+        <h2 class="top-text"> Frequently Asked Questions</h2>
+        <iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen class="mx-auto d-block" frameborder="0" height="315" src="https://www.youtube.com/embed/U2DvzPwgXGM?si=n7K8gVzE0_--lPZ-" title="YouTube video player" width="100%"></iframe>
         <div class="list-group list__container my-5">
             <ul class="list-group">
                 <p style='font-size:26px'><b>What is a list of stuff that might move on my dog?</b></p>
