--- a/adoptionguide.html
+++ b/adoptionguide.html
@@ -74,7 +74,7 @@
                 <div class="card text-center">
                     <div class="card-body">
                         <h5 class="card-title">Step 3: Complete Adoption Form</h5>
-                        <p class="card-text">Fill out the adoption form at <a href="adoptionmanager.html">adoptionmanager.html</a>
+                        <p class="card-text">Fill out the adoption form at <a href="/adoptionmanagerV2.html">our Adoption Page</a>
                             to finalize the adoption process.</p>
                         <button class="btn btn-primary" id="step3" onclick="toggleCheckmark('step3')">Mark as
                             Completed
@@ -87,7 +87,7 @@
 
         <div class="congrats__container" id="congratsMessage" style="display:none;">
             <div class="congrats__message">
-                Congratulations, you can adopt. Proceed to the <a href="adoptionmanager.html">adoption manager</a> to
+                Congratulations, you can adopt. Proceed to the <a href="/adoptionmanagerV2.html">adoption manager</a> to
                 complete. Be sure to pay!
                 <!-- added close btn -->
                 <button class="close-btn" onclick="closeCongratsMessage()">X</button>
