edited style and fix link
edited style on the index, made them all look the same, then updated the adoption manager link

--- a/adoptionguide.html
+++ b/adoptionguide.html
@@ -75,7 +75,7 @@
                 <div class="card text-center">
                     <div class="card-body">
                         <h5 class="card-title">Step 3: Complete Adoption Form</h5>
-                        <p class="card-text">Fill out the adoption form at <a href="adoptionmanager.html">adoptionmanager.html</a>
+                        <p class="card-text">Fill out the adoption form at <a href="adoptionmanagerV2.html">Adoption Manager Page</a>
                             to finalize the adoption process.</p>
                         <button class="btn btn-primary" id="step3" onclick="toggleCheckmark('step3')">Mark as
                             Completed
