--- a/adoptionmanagerV2.html
+++ b/adoptionmanagerV2.html
@@ -35,7 +35,7 @@
 <body>
 <main>
     <div class="container main__content mt-5">
-        <h2>Adopt a Pet</h2>
+        <h2>Adoption Manager</h2>
         <img id="adopt__banner" alt="Banner talking about adoption fees" src="https://images.squarespace-cdn.com/content/v1/51fbb364e4b0d35aeaac238d/1375490813782-F18USZ5NXAJE2ZGDMIKV/adoption-fee-banner.jpg?format=1500w">
         <div class="mb-3">
             <label class="form-label" for="animalType">Type of Animal</label>
