--- a/index.html
+++ b/index.html
@@ -257,11 +257,16 @@
                     <path d="M12 2c-4.418 0-8 3.582-8 8 0 4.782 7.303 13.316 7.553 13.632a.993.993 0 0 0 1.292 0c.25-.316 7.553-8.85 7.553-13.632 0-4.418-3.582-8-8-8zm0 11c-1.657 0-3-1.343-3-3s1.343-3 3-3 3 1.343 3 3-1.343 3-3 3z"/>
                 </svg>
             </div>
-                
+            <footer>
+                Adopt-a-Pet©. Animal Adoption Center, 2023 
+                <div class="gtranslate_wrapper" ></div>
+            </footer>   
         </div>
     </div><!--End of Spy scroller div-->
+
+    
   </main>
-  
+
 
   <!-- Bootstrap JavaScript Libraries -->
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
@@ -272,10 +277,8 @@
     integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz" crossorigin="anonymous">
   </script>
 
-<div class="gtranslate_wrapper"></div>
-<script>window.gtranslateSettings = {"default_language":"en","native_language_names":true,"detect_browser_language":true,"languages":["en","fr"],"wrapper_selector":".gtranslate_wrapper","flag_size":24,"horizontal_position":"right","vertical_position":"top","flag_style":"3d","alt_flags":{"en":"canada","fr":"quebec"}}</script>
+<script>window.gtranslateSettings = {"default_language":"en","native_language_names":true,"languages":["en","fr"],"wrapper_selector":".gtranslate_wrapper","flag_size":24,"flag_style":"3d","alt_flags":{"en":"canada","fr":"quebec"}}</script>
 <script src="https://cdn.gtranslate.net/widgets/latest/fn.js" defer></script>
-
 </body>
 
 </html>
