--- a/donation.html
+++ b/donation.html
@@ -91,6 +91,7 @@
 
     <footer>
         Adopt-a-Pet©. Animal Adoption Center, 2023 
+        <div class="gtranslate_wrapper" ></div>
     </footer>
 
     <script src="scripts/donation.js"></script>
@@ -104,8 +105,8 @@
         integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous">
     </script>
 
-<div class="gtranslate_wrapper"></div>
-<script>window.gtranslateSettings = {"default_language":"en","native_language_names":true,"detect_browser_language":true,"languages":["en","fr"],"wrapper_selector":".gtranslate_wrapper","flag_size":24,"horizontal_position":"right","vertical_position":"top","flag_style":"3d","alt_flags":{"en":"canada","fr":"quebec"}}</script>
+
+<script>window.gtranslateSettings = {"default_language":"en","native_language_names":true,"languages":["en","fr"],"wrapper_selector":".gtranslate_wrapper","flag_size":24,"flag_style":"3d","alt_flags":{"en":"canada","fr":"quebec"}}</script>
 <script src="https://cdn.gtranslate.net/widgets/latest/fn.js" defer></script>
 
 </body>
