--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     <input class="form-control me-2" type="text" placeholder="Search">
                     <!--use  .btn custom-btn-outline-success... to make your own!-->
                     <button class="btn btn-outline-success" type="submit"
-                    style="margin-right: 200px;">
+                    style="margin-right: 5%;">
                     Search</button>
                 </form>
             </div>
@@ -214,7 +214,7 @@
             </div>
         </div>
 
-        <div id="div3">
+        <div id="div3" style="margin-bottom: 0;">
             <div class="container">
                 <div class="content-holder">
                         <h1 class="text-important">Support Us!</h1>
@@ -238,11 +238,11 @@
             </div>
         </div>
         
-        <div id="map">
+        <div id="map" >
             <!-- This crazy src is just for testing, and it does not require an API key-->
             <iframe
             width="100%"
-            height="100%"
+            height="120%"
             frameborder="0"
             style="border:0"
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3152.7662001683796!2d-122.41941558468142!3d37.774929979752825!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808580999efa8041%3A0xa80a4cfa418051b!2sSan%20Francisco%2C%20CA!5e0!3m2!1sen!2sus!4v1607894198013!5m2!1sen!2sus"
@@ -257,6 +257,7 @@
                     <path d="M12 2c-4.418 0-8 3.582-8 8 0 4.782 7.303 13.316 7.553 13.632a.993.993 0 0 0 1.292 0c.25-.316 7.553-8.85 7.553-13.632 0-4.418-3.582-8-8-8zm0 11c-1.657 0-3-1.343-3-3s1.343-3 3-3 3 1.343 3 3-1.343 3-3 3z"/>
                 </svg>
             </div>
+
             <footer>
                 Adopt-a-Pet©. Animal Adoption Center, 2023 
                 <div class="gtranslate_wrapper" ></div>
@@ -277,7 +278,7 @@
     integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz" crossorigin="anonymous">
   </script>
 
-<script>window.gtranslateSettings = {"default_language":"en","native_language_names":true,"languages":["en","fr"],"wrapper_selector":".gtranslate_wrapper","flag_size":24,"flag_style":"3d","alt_flags":{"en":"canada","fr":"quebec"}}</script>
+<script>window.gtranslateSettings = {"default_language":"en","native_language_names":true,"languages":["en","fr"],"wrapper_selector":".gtranslate_wrapper","flag_style":"3d","alt_flags":{"en":"canada","fr":"quebec"}}</script>
 <script src="https://cdn.gtranslate.net/widgets/latest/fn.js" defer></script>
 </body>
 
