html checked, css checked

--- a/FAQ.html
+++ b/FAQ.html
@@ -40,10 +40,11 @@
     <div class="container main__content mt-5 ">
 
         <h2 class="top-text"> Frequently Asked Questions</h2>
-        <iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen class="mx-auto d-block" frameborder="0" height="315" src="https://www.youtube.com/embed/U2DvzPwgXGM?si=n7K8gVzE0_--lPZ-" title="YouTube video player" width="100%"></iframe>
+        <iframe class="responsive-iframe" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen src="https://www.youtube.com/embed/U2DvzPwgXGM?si=n7K8gVzE0_--lPZ-" title="YouTube video player"></iframe>
+
         <div class="list-group list__container my-5">
+            <p style='font-size:26px'><b>What is a list of stuff that might move on my dog?</b></p>
             <ul class="list-group">
-                <p style='font-size:26px'><b>What is a list of stuff that might move on my dog?</b></p>
                 <li class="list-group-item">Fleas</li>
                 <li class="list-group-item">Parasites</li>
                 <li class="list-group-item">The Thing</li>
@@ -51,6 +52,7 @@
                 <li class="list-group-item">Dog tag</li>
             </ul>
         </div>
+        
         <div class="list-group list__container my-5">
             <ul class="list-group">
                 <li class="list-group-item active">
