--- a/adoptionguide.html
+++ b/adoptionguide.html
@@ -101,7 +101,7 @@
 
         <div class="complaining" style="display: flex; justify-content: center; align-items: center; height: 100px; padding: 300px;">
             <h1>Have a <strong>COMPLAIN</strong> about our fees?</h1>
-            <img id="guide__complain" src="https://static.wixstatic.com/media/875ae7_ed1fdf04dbee48dc8b1817c1810f1b3a~mv2.png/v1/fill/w_560,h_560,fp_0.50_0.50,q_85,usm_0.66_1.00_0.01,enc_auto/image.png">
+            <img id="guide__complain" src="https://static.wixstatic.com/media/875ae7_ed1fdf04dbee48dc8b1817c1810f1b3a~mv2.png/v1/fill/w_560,h_560,fp_0.50_0.50,q_85,usm_0.66_1.00_0.01,enc_auto/image.png" alt="Complaints about adoption fees">
         </div>
 
         <h3>Dogs</h3>
