--- a/contact.html
+++ b/contact.html
@@ -36,18 +36,17 @@
 <body>
     <main>
     <div class="container">
-        <main>
             <section class="contact-info">
                 <h1>Give us a call...</h1>
                 <p><strong>Phone:</strong> +1 234 567 8900</p>
                 <p><strong>Address:</strong> 1234 Example St, City, Country</p>
             </section>
 
-            <section class="company-images">
+            <div class="company-images">
                 <img src="images/contact/hello-dog.gif" alt="This is a dog with a phone">
-            </section>
+            </div>
 
-            <section class="contact-form">
+            <div class="contact-form">
                 <h2>...or leave us a message!</h2>
                 <form id="contactForm">
                     <label for="name">Name:</label>
@@ -62,12 +61,11 @@
                     <button type="submit" class="btn btn-light contact-btn btn-lg">Send Message</button>
 
                 </form>
-            </section>
+            </div>
 
-            <section class="company-images">
+            <div class="company-images">
                 <img src="images/contact/goodboiIT.jpg" alt="Good Boi IT">
-            </section>
-        </main>
+            </div>
     </div>
 </main>
 
