--- a/donation.html
+++ b/donation.html
@@ -27,7 +27,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet">
     
     <!--Font-->
-    <link href="https://fonts.googleapis.com/css2?family=Luckiest+Guy&display=swap" rel="stylesheet">\
+    <link href="https://fonts.googleapis.com/css2?family=Luckiest+Guy&display=swap" rel="stylesheet">
 
   <!--Font-->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -106,8 +106,8 @@
     </script>
 
 
-<script>window.gtranslateSettings = {"default_language":"en","native_language_names":true,"languages":["en","fr"],"wrapper_selector":".gtranslate_wrapper","flag_style":"3d","alt_flags":{"en":"canada","fr":"quebec"}}</script>
-<script src="https://cdn.gtranslate.net/widgets/latest/fn.js" defer></script>
+    <script>window.gtranslateSettings = {"default_language":"en","native_language_names":true,"languages":["en","fr"],"wrapper_selector":".gtranslate_wrapper","flag_style":"3d","alt_flags":{"en":"canada","fr":"quebec"}}</script>
+    <script src="https://cdn.gtranslate.net/widgets/latest/fn.js" defer></script>
 
 </body>
 </html>
